Fixed some minor spacing/grammar aspects'

--- a/clicky_game/src/components/NavBar/style.css
+++ b/clicky_game/src/components/NavBar/style.css
@@ -4,5 +4,5 @@
 }
 
 .NavDim{
-    height: 150px;
+    height: 140px;
 }
